Fixed: rooms list goes out of window on mobile

--- a/src/main-scss/home.scss
+++ b/src/main-scss/home.scss
@@ -171,3 +171,10 @@ body.home {
 		}
 	}
 }
+
+body.mobile #home-main-content {
+	th, td {
+		max-width: 60px; // hack...
+		overflow: hidden;
+	}
+}
